k8s/openfga.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfga
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  - port: 8081
    name: grpc
    targetPort: 8081
  - port: 3000
    name: metrics
    targetPort: 3000
  selector:
    app: openfga
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openfga
spec:
  selector:
    matchLabels:
      app: openfga
  template:
    metadata:
      labels:
        app: openfga
    spec:
      containers:
      - name: openfga
        image: openfga/openfga:v1.11.2
        args: ["run"]
        ports:
        - containerPort: 8080
        - containerPort: 8081
        - containerPort: 3000
